--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,13 @@ service-worker: true
 
 # Friends
 friends: [
-{
+   {
+        title: "简书·BY",
+        href: "http://www.jianshu.com/u/e71990ada2fd"
+    },{
+        title: "Apple",
+        href: "https://apple.com"
+    },{
         title: "Apple Developer",
         href: "https://developer.apple.com/"
     }
