--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ github_repo: "https://github.com/maggiexheuw/maggiexheuw.github.io.git" # you co
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "On the shoulders of giants"
+sidebar-avatar: /img/Witten.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
